globo/loadbalancer.tf
# Create load balancer service account

data "aws_elb_service_account" "root" {}

# Create load balancer 

resource "aws_lb" "nginx" {

    name = "globo-web-alb"
    internal = false
    load_balancer_type = "application"
    security_groups = [aws_security_group.nginx_alb_sg.id]
    subnets = [aws_subnet.public_subnet1.id,aws_subnet.public_subnet2.id]
    depends_on = [aws_s3_bucket_policy.web_bucket]
    
    enable_deletion_protection = false
    tags = local.common_tags
    
    access_logs {
        bucket = aws_s3_bucket.web_bucket.bucket
        prefix = "alb-logs"
        enabled = true
    }
}

# Create LB target group 

resource "aws_lb_target_group" "nginx" {

    name = "nginx-alb-tg"
    port = 80
    protocol = "HTTP"
    vpc_id = aws_vpc.app.id
    
    tags = local.common_tags
}

# Create LB listener 

resource "aws_lb_listener" "nginx" {

    load_balancer_arn = aws_lb.nginx.arn 
    port = "80"
    protocol = "HTTP"
    
    default_action {
        type = "forward"
        target_group_arn = aws_lb_target_group.nginx.arn 
    }
    
    tags = local.common_tags 
}

# Create target group attachment 

resource "aws_lb_target_group_attachment" "nginx1" {

    target_group_arn = aws_lb_target_group.nginx.arn 
    target_id = aws_instance.nginx1.id
    port = 80
}

# Create target group attachment for second instance 

resource "aws_lb_target_group_attachment" "nginx2" {

    target_group_arn = aws_lb_target_group.nginx.arn 
    target_id = aws_instance.nginx2.id
    port = 80
}
